# bevy-kira-components

./: .pre-commit-config.yaml  .pre-commit-config.yml  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  publish.yaml
bevy_kira_components_derive/: Cargo.toml
bevy_kira_components_derive/src/: lib.rs
examples/: audio.rs  audio_control.rs  custom_sound.rs  remove_components.rs
examples/custom_sound/: Cargo.toml
examples/custom_sound/src/: main.rs  sine_wave.rs
examples/diagnostics-ui/: Cargo.toml
examples/diagnostics-ui/src/: lib.rs
examples/interactive/: Cargo.toml
examples/interactive/src/: main.rs  ui.rs
examples/spatial/: Cargo.toml
examples/spatial/src/: camera.rs  main.rs  motion.rs  ui.rs
src/: backend.rs  clock.rs  commands.rs  diagnostics.rs  lib.rs  loader.rs  manager.rs  spatial.rs  tracks.rs
src/sources/: mod.rs
src/sources/audio_file/: loader.rs  mod.rs  source.rs
