[workspace]
members = [
    "examples/*"
]

[package]
name = "bevy-kira-components"
description = "Alternative crate for Bevy integration of Kira"
license = "MIT"
homepage = "https://github.com/solarliner/bevy-kira-components"
repository = "https://github.com/solarliner/bevy-kira-components.git"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_math = { version = "0.13.2", features = ["mint"] }
cpal = "0.15.3"
kira = { version = "0.8.6", git = "https://github.com/tesselode/kira.git", branch = "main", features = ["serde"] }
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }

[dependencies.bevy]
version = "0.13.0"
default-features = false
features = ["bevy_asset"]

[dev-dependencies]
ringbuf = "0.3.3"

[dev-dependencies.bevy]
version = "0.13.0"
default-features = false
features = [
    # Copied from bevy with "bevy_audio" removed
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
]

[features]
default = []
diagnostics = []
