[workspace]
members = [
    "bevy_kira_components_derive",
    "examples/*"
]

[package]
name = "bevy-kira-components"
description = "Alternative crate for Bevy integration of Kira"
license = "MIT"
homepage = "https://github.com/solarliner/bevy-kira-components"
repository = "https://github.com/solarliner/bevy-kira-components.git"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_kira_components_derive = { path = "./bevy_kira_components_derive" }
bevy_math = { version = "0.13.2", features = ["mint"] }
cpal = "0.15.3"
kira = { version = "0.9.0", features = ["serde"] }
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }

[dependencies.bevy]
version = "0.13.0"
default-features = false
features = ["bevy_asset"]

[dev-dependencies]
bevy = "0.13"

[features]
default = []
diagnostics = []
