[package]
name = "interactive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-kira-components = { path = "../..", features = ["diagnostics"] }
diagnostics-ui = { path = "../diagnostics-ui" }

[dependencies.bevy]
version = "0.13.0"
default-features = false
features = [
    # Copied from bevy with "bevy_audio" removed
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
]

[profile.dev.packages.bevy]
opt-level = 3

[features]
default = []
dev = [
    "bevy/dynamic_linking",
    "bevy/file_watcher",
]
tracing = ["bevy/trace_chrome"]
