[package]
name = "interactive"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy-kira-components = { path = "../..", features = ["diagnostics"] }
diagnostics-ui = { path = "../diagnostics-ui" }

[dependencies.bevy]
version = "0.14.0-rc.2"
default-features = false
features = [
    # Copied from bevy with "bevy_audio" removed
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
]

[features]
default = []
dev = [
    "bevy/dynamic_linking",
    "bevy/file_watcher",
]
tracing = ["bevy/trace_chrome"]
